new arabic words

--- a/index.html
+++ b/index.html
@@ -2381,7 +2381,27 @@
   {"tense1": "Vide", "tense2": "خالٍ / خالون / خالِيانِ / خالينَ / خالِيَيْنِ", "type": "word"},
   {"tense1": "Effacer", "tense2": "مَحا / يَمْحو / مَحْو / اِمْحُ / يُمْحى / مُحيَ", "type": "verb"},
   {"tense1": "Caractéristique", "tense2": "مَعْلَم / مَعالِم / مَعْلَمانِ / مَعالِمًا / مَعْلَمَيْنِ", "type": "word"},
-  {"tense1": "Exposer (un secret)", "tense2": "فَضَحَ / يَفْضَحُ / فَضْح / اِفْضَحْ / يُفْضَحُ / فُضِحَ", "type": "verb"}
+  {"tense1": "Exposer (un secret)", "tense2": "فَضَحَ / يَفْضَحُ / فَضْح / اِفْضَحْ / يُفْضَحُ / فُضِحَ", "type": "verb"},
+  {"tense1": "Déployer (fournir des efforts)", "tense2": "بَذَلَ / يَبْذُلُ / بَذْل / اِبْذُلْ / يُبْذَلُ / بُذِلَ", "type": "verb"},
+  {"tense1": "Propagande", "tense2": "دِعاية / دِعايات / دِعايتانِ / دِعاياتٍ / دِعايَتَيْنِ", "type": "word"},
+  {"tense1": "Tribu", "tense2": "قَبيلة / قَبائل / قَبيلتانِ / قَبائلَ / قَبيلتَيْنِ", "type": "word"},
+  {"tense1": "Isolé (isolement)", "tense2": "عُزلة / عُزلات / عُزلتانِ / عُزلاتٍ / عُزلتَيْنِ", "type": "word"},
+  {"tense1": "Dominer", "tense2": "هَيْمَنَ / يُهَيْمِنُ / هَيْمَنة / هَيْمِنْ / يُهَيْمَنُ / هُيْمِنَ", "type": "verb"},
+  {"tense1": "Devenir", "tense2": "أَضْحى / يُضْحي / إضْحاء / أَضْحِ / يُضْحى / أُضْحِيَ", "type": "verb"},
+  {"tense1": "S’éteindre (astre)", "tense2": "أَفَلَ / يَأفِلُ / أُفول / أَفِلْ / يُؤفَلُ / أُفِلَ", "type": "verb"},
+  {"tense1": "Renvoyer / licencier", "tense2": "سَرَّحَ / يُسَرِّحُ / تَسريح / سَرِّحْ / يُسَرَّحُ / سُرِّحَ", "type": "verb"},
+  {"tense1": "Avoir hâte", "tense2": "تَطَلَّعَ / يَتَطَلَّعُ / تَطَلُّع / تَطَلَّعْ / يُتَطَلَّعُ / تُطُلِّعَ", "type": "verb"},
+  {"tense1": "Abuser de", "tense2": "أَفْرَطَ / يُفْرِطُ / إفْراط / أَفْرِطْ / يُفْرَطُ / أُفْرِطَ", "type": "verb"},
+  {"tense1": "Émerveiller", "tense2": "أَبْهَجَ / يُبْهِجُ / إبْهاج / أَبْهِجْ / يُبْهَجُ / أُبْهِجَ", "type": "verb"},
+  {"tense1": "Paradis", "tense2": "فِرْدَوْس / فَراديس / فِرْدَوْسانِ / فَراديسَ / فِرْدَوْسَيْنِ", "type": "word"},
+  {"tense1": "Le capital", "tense2": "أَصْل / أُصول / أَصْلانِ / أُصولًا / أَصْلَيْنِ", "type": "word"},
+  {"tense1": "Bien immobilier", "tense2": "عِقار / عِقارات / عِقارَانِ / عِقاراتٍ / عِقارَيْنِ", "type": "word"},
+  {"tense1": "Charité", "tense2": "صَدَقة / صَدَقات / صَدَقتانِ / صَدَقاتٍ / صَدَقتَيْنِ", "type": "word"},
+  {"tense1": "Piété", "tense2": "بِرّ / أَبْرار / بِرّانِ / أَبْرارًا / بِرَّيْنِ", "type": "word"},
+  {"tense1": "Descendance", "tense2": "ذُرِّيَّة / ذُرِّيّات / ذُرِّيَّتانِ / ذُرِّيّاتٍ / ذُرِّيَّتَيْنِ", "type": "word"},
+  {"tense1": "Agité", "tense2": "مُضْطَرِب / مُضْطَرِبون / مُضْطَرِبانِ / مُضْطَرِبينَ / مُضْطَرِبَيْنِ", "type": "word"},
+  {"tense1": "Fréquence", "tense2": "وَتيرة / وَتائِر / وَتيرتانِ / وَتائِرَ / وَتيرتَيْنِ", "type": "word"},
+  {"tense1": "Début", "tense2": "مَطْلَع / مَطالِع / مَطْلعانِ / مَطالِعًا / مَطْلعَيْنِ", "type": "word"}
 ]
         };
 
