new arabic words

--- a/index.html
+++ b/index.html
@@ -2385,10 +2385,10 @@
   {"tense1": "Déployer (fournir des efforts)", "tense2": "بَذَلَ / يَبْذُلُ / بَذْل / اِبْذُلْ / يُبْذَلُ / بُذِلَ", "type": "verb"},
   {"tense1": "Propagande", "tense2": "دِعاية / دِعايات / دِعايتانِ / دِعاياتٍ / دِعايَتَيْنِ", "type": "word"},
   {"tense1": "Tribu", "tense2": "قَبيلة / قَبائل / قَبيلتانِ / قَبائلَ / قَبيلتَيْنِ", "type": "word"},
-  {"tense1": "Isolé (isolement)", "tense2": "عُزلة / عُزلات / عُزلتانِ / عُزلاتٍ / عُزلتَيْنِ", "type": "word"},
+  {"tense1": "Isolé", "tense2": "عُزلة / عُزلات / عُزلتانِ / عُزلاتٍ / عُزلتَيْنِ", "type": "word"},
   {"tense1": "Dominer", "tense2": "هَيْمَنَ / يُهَيْمِنُ / هَيْمَنة / هَيْمِنْ / يُهَيْمَنُ / هُيْمِنَ", "type": "verb"},
   {"tense1": "Devenir", "tense2": "أَضْحى / يُضْحي / إضْحاء / أَضْحِ / يُضْحى / أُضْحِيَ", "type": "verb"},
-  {"tense1": "S’éteindre (astre)", "tense2": "أَفَلَ / يَأفِلُ / أُفول / أَفِلْ / يُؤفَلُ / أُفِلَ", "type": "verb"},
+  {"tense1": "S’éteindre ", "tense2": "أَفَلَ / يَأفِلُ / أُفول / أَفِلْ / يُؤفَلُ / أُفِلَ", "type": "verb"},
   {"tense1": "Renvoyer / licencier", "tense2": "سَرَّحَ / يُسَرِّحُ / تَسريح / سَرِّحْ / يُسَرَّحُ / سُرِّحَ", "type": "verb"},
   {"tense1": "Avoir hâte", "tense2": "تَطَلَّعَ / يَتَطَلَّعُ / تَطَلُّع / تَطَلَّعْ / يُتَطَلَّعُ / تُطُلِّعَ", "type": "verb"},
   {"tense1": "Abuser de", "tense2": "أَفْرَطَ / يُفْرِطُ / إفْراط / أَفْرِطْ / يُفْرَطُ / أُفْرِطَ", "type": "verb"},
@@ -2401,7 +2401,27 @@
   {"tense1": "Descendance", "tense2": "ذُرِّيَّة / ذُرِّيّات / ذُرِّيَّتانِ / ذُرِّيّاتٍ / ذُرِّيَّتَيْنِ", "type": "word"},
   {"tense1": "Agité", "tense2": "مُضْطَرِب / مُضْطَرِبون / مُضْطَرِبانِ / مُضْطَرِبينَ / مُضْطَرِبَيْنِ", "type": "word"},
   {"tense1": "Fréquence", "tense2": "وَتيرة / وَتائِر / وَتيرتانِ / وَتائِرَ / وَتيرتَيْنِ", "type": "word"},
-  {"tense1": "Début", "tense2": "مَطْلَع / مَطالِع / مَطْلعانِ / مَطالِعًا / مَطْلعَيْنِ", "type": "word"}
+  {"tense1": "Début", "tense2": "مَطْلَع / مَطالِع / مَطْلعانِ / مَطالِعًا / مَطْلعَيْنِ", "type": "word"},
+  {"tense1": "extrême", "tense2": "مُتَطَرِّف / مُتَطَرِّفون / مُتَطَرِّفان / مُتَطَرِّفينَ / مُتَطَرِّفَيْن", "type": "word"},
+  {"tense1": "déclencher", "tense2": "أَطْلَقَ/يُطْلِقُ/إِطْلَاق/أَطْلِقْ/يُطْلَقُ/أُطْلِقَ", "type": "verb"},
+  {"tense1": "déséquilibre", "tense2": "اخْتِلال / اخْتِلالات / اخْتِلالان / اخْتِلالاتٍ / اخْتِلالَيْن", "type": "word"},
+  {"tense1": "perturbation", "tense2": "اضْطِراب / اضْطِرابات / اضْطِرابان / اضْطِراباتٍ / اضْطِرابَيْن", "type": "word"},
+  {"tense1": "session", "tense2": "جَلْسَة / جَلَسات / جَلْسَتان / جَلَساتٍ / جَلْسَتَيْن", "type": "word"},
+  {"tense1": "individue", "tense2": "المَرْء / المَرْؤون / المَرْءان / المَرْئينَ / المَرْءَيْن", "type": "word"},
+  {"tense1": "Testament", "tense2": "وَصِيَّة / وَصايا / وَصِيَّتان / وَصايا / وَصِيَّتَيْن", "type": "word"},
+  {"tense1": "Empêcher", "tense2": "حالَ/يَحولُ/حَيْلولة/حُلْ/يُحالُ/حِيلَ", "type": "verb"},
+  {"tense1": "obtenir", "tense2": "نالَ/يَنالُ/نَيْل/نَلْ/يُنَالُ/نِيلَ", "type": "verb"},
+  {"tense1": "laitue", "tense2": "خَسّ / خُسوص / خَسّان / خُسوصٍ / خَسَّيْن", "type": "word"},
+  {"tense1": "mythe", "tense2": "خُرافَة / خُرافات / خُرافَتان / خُرافاتٍ / خُرافَتَيْن", "type": "word"},
+  {"tense1": "humanité", "tense2": "آدَمِيّ / آدَمِيُّون / آدَمِيّان / آدَمِيِّينَ / آدَمِيَّيْن", "type": "word"},
+  {"tense1": "compliqué", "tense2": "شاقّ / شاقُّون / شاقّان / شاقِّينَ / شاقَّيْن", "type": "word"},
+  {"tense1": "désaltérer", "tense2": "رَوِيَ/يَرْوَى/رِيّ/ارْوَ/يُرْوَى/رُوِيَ", "type": "verb"},
+  {"tense1": "soif", "tense2": "ظَمَأ / ظِماء / ظَمَآن / ظِماءٍ / ظَمَأَيْن", "type": "word"},
+  {"tense1": "bétail", "tense2": "ماشِيَة / مَواشٍ / ماشِيَتان / مَواشٍ / ماشِيَتَيْن", "type": "word"},
+  {"tense1": "Replíque/dialogue", "tense2": "سَطْر / سُطور / سَطْران / سُطورٍ / سَطْرَيْن", "type": "word"},
+  {"tense1": "effacer", "tense2": "طَمَسَ/يَطْمِسُ/طَمْس/اطْمِسْ/يُطْمَسُ/طُمِسَ", "type": "verb"},
+  {"tense1": "imprimer", "tense2": "طَبَعَ/يَطْبَعُ/طَبْع/اطْبَعْ/يُطْبَعُ/طُبِعَ", "type": "verb"},
+  {"tense1": "procédure", "tense2": "إِجْراء / إِجْراءات / إِجْراءان / إِجْراءاتٍ / إِجْراءَيْن", "type": "word"}
 ]
         };
 
