--- a/index.html
+++ b/index.html
@@ -2421,7 +2421,27 @@
   {"tense1": "Replíque/dialogue", "tense2": "سَطْر / سُطور / سَطْران / سُطورٍ / سَطْرَيْن", "type": "word"},
   {"tense1": "effacer", "tense2": "طَمَسَ/يَطْمِسُ/طَمْس/اطْمِسْ/يُطْمَسُ/طُمِسَ", "type": "verb"},
   {"tense1": "imprimer", "tense2": "طَبَعَ/يَطْبَعُ/طَبْع/اطْبَعْ/يُطْبَعُ/طُبِعَ", "type": "verb"},
-  {"tense1": "procédure", "tense2": "إِجْراء / إِجْراءات / إِجْراءان / إِجْراءاتٍ / إِجْراءَيْن", "type": "word"}
+  {"tense1": "procédure", "tense2": "إِجْراء / إِجْراءات / إِجْراءان / إِجْراءاتٍ / إِجْراءَيْن", "type": "word"},
+  {"tense1": "Protection", "tense2": "وِقاية / وِقايات / وِقايتانِ / وِقاياتٍ / وِقايَتَيْنِ", "type": "word"},
+  {"tense1": "Infliger", "tense2": "كَبَّدَ / يُكَبِّدُ / تَكْبيد / كَبِّدْ / يُكَبَّدُ / كُبِّدَ", "type": "verb"},
+  {"tense1": "Enchère", "tense2": "مُزايدة / مُزايدات / مُزايدتانِ / مُزايداتٍ / مُزايدَتَيْنِ", "type": "word"},
+  {"tense1": "Nostalgie", "tense2": "حَنين / — / — / — / —", "type": "word"},
+  {"tense1": "Biaisé", "tense2": "مُنْحاز / مُنْحازون / مُنْحازانِ / مُنْحازينَ / مُنْحازَيْنِ", "type": "word"},
+  {"tense1": "Décharge", "tense2": "مَكَبّ / مَكَبّات / مَكَبّانِ / مَكَبّاتٍ / مَكَبَّيْنِ", "type": "word"},
+  {"tense1": "Disque dur", "tense2": "قُرْص صَلْب / أَقْراص صَلْبة / قُرْصانِ صَلْبانِ / أَقْراصًا صَلْبةً / قُرْصَيْنِ صَلْبَيْنِ", "type": "word"},
+  {"tense1": "Établir", "tense2": "رَسَّخَ / يُرَسِّخُ / تَرْسيخ / رَسِّخْ / يُرَسَّخُ / رُسِّخَ", "type": "verb"},
+  {"tense1": "Être synonyme de", "tense2": "لَدَى البَعْض مُرادِفًا لِـ", "type": "sentence"},
+  {"tense1": "En bref", "tense2": "باِخْتِصار", "type": "sentence"},
+  {"tense1": "Félin", "tense2": "سِنَّوريّ / سِنَّوريّون / سِنَّوريّانِ / سِنَّوريّينَ / سِنَّوريَّيْنِ", "type": "word"},
+  {"tense1": "Rituel", "tense2": "شَعيرة / شَعائر / شَعيرتانِ / شَعائرَ / شَعيرتَيْنِ", "type": "word"},
+  {"tense1": "Descendre", "tense2": "اِنْحَدَرَ / يَنْحَدِرُ / اِنْحِدار / اِنْحَدِرْ / يُنْحَدَرُ / اُنْحُدِرَ", "type": "verb"},
+  {"tense1": "Régler", "tense2": "أَضْبَطَ / يُضْبِطُ / إضْباط / أَضْبِطْ / يُضْبَطُ / أُضْبِطَ", "type": "verb"},
+  {"tense1": "Muet", "tense2": "أَبْكَم / بُكْم / أَبْكمانِ / بُكْمًا / أَبْكَمَيْنِ", "type": "word"},
+  {"tense1": "Notification", "tense2": "إشْعار / إشْعارات / إشْعارانِ / إشْعاراتٍ / إشْعارَيْنِ", "type": "word"},
+  {"tense1": "Taxi", "tense2": "سَيّارة أُجْرة / سَيّارات أُجْرة / سَيّارتا أُجْرة / سَيّاراتٍ أُجْرةً / سَيّارتَيْنِ أُجْرةٍ", "type": "word"},
+  {"tense1": "Variation", "tense2": "تَبايُن / تَبايُنات / تَبايُنانِ / تَبايُناتٍ / تَبايُنَيْنِ", "type": "word"},
+  {"tense1": "Circuit intégré", "tense2": "دائرة مُتَكامِلة / دَوائِر مُتَكامِلة / دائرتانِ مُتَكامِلتانِ / دَوائِرَ مُتَكامِلةً / دائرتَيْنِ مُتَكامِلَتَيْنِ", "type": "word"},
+  {"tense1": "Négliger", "tense2": "أَغْفَلَ / يُغْفِلُ / إغْفال / أَغْفِلْ / يُغْفَلُ / أُغْفِلَ", "type": "verb"}
 ]
         };
 
