fixing arabic words

--- a/index.html
+++ b/index.html
@@ -2425,7 +2425,7 @@
   {"tense1": "Protection", "tense2": "وِقاية / وِقايات / وِقايتانِ / وِقاياتٍ / وِقايَتَيْنِ", "type": "word"},
   {"tense1": "Infliger", "tense2": "كَبَّدَ / يُكَبِّدُ / تَكْبيد / كَبِّدْ / يُكَبَّدُ / كُبِّدَ", "type": "verb"},
   {"tense1": "Enchère", "tense2": "مُزايدة / مُزايدات / مُزايدتانِ / مُزايداتٍ / مُزايدَتَيْنِ", "type": "word"},
-  {"tense1": "Nostalgie", "tense2": "حَنين / — / — / — / —", "type": "word"},
+  {"tense1": "Nostalgie", "tense2": "حَنين / حَنينات / حَنينان / حَنيناتٍ / حَنينَيْن", "type": "word"},
   {"tense1": "Biaisé", "tense2": "مُنْحاز / مُنْحازون / مُنْحازانِ / مُنْحازينَ / مُنْحازَيْنِ", "type": "word"},
   {"tense1": "Décharge", "tense2": "مَكَبّ / مَكَبّات / مَكَبّانِ / مَكَبّاتٍ / مَكَبَّيْنِ", "type": "word"},
   {"tense1": "Disque dur", "tense2": "قُرْص صَلْب / أَقْراص صَلْبة / قُرْصانِ صَلْبانِ / أَقْراصًا صَلْبةً / قُرْصَيْنِ صَلْبَيْنِ", "type": "word"},
@@ -2441,7 +2441,8 @@
   {"tense1": "Taxi", "tense2": "سَيّارة أُجْرة / سَيّارات أُجْرة / سَيّارتا أُجْرة / سَيّاراتٍ أُجْرةً / سَيّارتَيْنِ أُجْرةٍ", "type": "word"},
   {"tense1": "Variation", "tense2": "تَبايُن / تَبايُنات / تَبايُنانِ / تَبايُناتٍ / تَبايُنَيْنِ", "type": "word"},
   {"tense1": "Circuit intégré", "tense2": "دائرة مُتَكامِلة / دَوائِر مُتَكامِلة / دائرتانِ مُتَكامِلتانِ / دَوائِرَ مُتَكامِلةً / دائرتَيْنِ مُتَكامِلَتَيْنِ", "type": "word"},
-  {"tense1": "Négliger", "tense2": "أَغْفَلَ / يُغْفِلُ / إغْفال / أَغْفِلْ / يُغْفَلُ / أُغْفِلَ", "type": "verb"}
+  {"tense1": "Négliger", "tense2": "أَغْفَلَ / يُغْفِلُ / إغْفال / أَغْفِلْ / يُغْفَلُ / أُغْفِلَ", "type": "verb"},
+  {"tense1": "Infraction", "tense2": "اِنْتِهاك / اِنْتِهاكات / اِنْتِهاكان / اِنْتِهاكاتٍ / اِنْتِهاكَيْن", "type": "word"}
 ]
         };
 
