new arabic words

--- a/index.html
+++ b/index.html
@@ -2442,7 +2442,12 @@
   {"tense1": "Variation", "tense2": "تَبايُن / تَبايُنات / تَبايُنانِ / تَبايُناتٍ / تَبايُنَيْنِ", "type": "word"},
   {"tense1": "Circuit intégré", "tense2": "دائرة مُتَكامِلة / دَوائِر مُتَكامِلة / دائرتانِ مُتَكامِلتانِ / دَوائِرَ مُتَكامِلةً / دائرتَيْنِ مُتَكامِلَتَيْنِ", "type": "word"},
   {"tense1": "Négliger", "tense2": "أَغْفَلَ / يُغْفِلُ / إغْفال / أَغْفِلْ / يُغْفَلُ / أُغْفِلَ", "type": "verb"},
-  {"tense1": "Infraction", "tense2": "اِنْتِهاك / اِنْتِهاكات / اِنْتِهاكان / اِنْتِهاكاتٍ / اِنْتِهاكَيْن", "type": "word"}
+  {"tense1": "Infraction", "tense2": "اِنْتِهاك / اِنْتِهاكات / اِنْتِهاكان / اِنْتِهاكاتٍ / اِنْتِهاكَيْن", "type": "word"},
+  {"tense1": "Exportation", "tense2": "تَصْدير / تَصْديرات / تَصْديران / تَصْديراتٍ / تَصْديرَيْن", "type": "word"},
+{"tense1": "Condamner", "tense2": "أَدانَ / يُدينُ / إِدانة / دِنْ / يُدانُ / أُدينَ", "type": "verb"},
+{"tense1": "Rationaliser / Optimiser", "tense2": "رَشَّدَ / يُرَشِّدُ / تَرْشيد / رَشِّدْ / يُرَشَّدُ / رُشِّدَ", "type": "verb"},
+{"tense1": "Installer", "tense2": "رَكَّبَ / يُرَكِّبُ / تَرْكيب / رَكِّبْ / يُرَكَّبُ / رُكِّبَ", "type": "verb"},
+{"tense1": "Déclarer", "tense2": "صَرَّحَ / يُصَرِّحُ / تَصْريح / صَرِّحْ / يُصَرَّحُ / صُرِّحَ", "type": "verb"}
 ]
         };
 
