new arabic words

--- a/index.html
+++ b/index.html
@@ -2446,7 +2446,32 @@
 {"tense1": "Condamner", "tense2": "أَدانَ / يُدينُ / إِدانة / دِنْ / يُدانُ / أُدينَ", "type": "verb"},
 {"tense1": "Rationaliser / Optimiser", "tense2": "رَشَّدَ / يُرَشِّدُ / تَرْشيد / رَشِّدْ / يُرَشَّدُ / رُشِّدَ", "type": "verb"},
 {"tense1": "Installer", "tense2": "رَكَّبَ / يُرَكِّبُ / تَرْكيب / رَكِّبْ / يُرَكَّبُ / رُكِّبَ", "type": "verb"},
-{"tense1": "Déclarer", "tense2": "صَرَّحَ / يُصَرِّحُ / تَصْريح / صَرِّحْ / يُصَرَّحُ / صُرِّحَ", "type": "verb"}
+{"tense1": "Déclarer", "tense2": "صَرَّحَ / يُصَرِّحُ / تَصْريح / صَرِّحْ / يُصَرَّحُ / صُرِّحَ", "type": "verb"},
+{"tense1": "Gaspiller", "tense2": "هَدَرَ / يَهْدِرُ / هَدْر / اِهْدِرْ / يُهْدَرُ / هُدِرَ", "type": "verb"},
+{"tense1": "Robinet", "tense2": "صُنبور / صَنابير / صُنبوران / صَنابيرٍ / صُنبورَيْن", "type": "word"},
+{"tense1": "Blague", "tense2": "مَزْحَة / مَزْحات / مَزْحتان / مَزْحاتٍ / مَزْحَتَيْن", "type": "word"},
+{"tense1": "Hacker", "tense2": "اِخْتَرَقَ / يَخْتَرِقُ / اِخْتِراق / اِخْتَرِقْ / يُخْتَرَقُ / اُخْتُرِقَ", "type": "verb"},
+{"tense1": "Audacieux", "tense2": "جَريء / جُرَآء / جَريئان / جُرَآءٍَ / جَريئَيْن", "type": "word"},
+{"tense1": "Microscopique", "tense2": "مِجْهَريّ / مِجْهَريّة / مِجْهَريّان / مِجْهَريّين / مِجْهَريّاتٍ", "type": "word"},
+{"tense1": "Trombonne", "tense2": "مُشَبِّك وَرَق / مُشَبِّكات وَرَق / مُشَبِّكان وَرَق / مُشَبِّكاتٍ وَرَق / مُشَبِّكَيْن وَرَق", "type": "word"},
+{"tense1": "Trou noir", "tense2": "ثُقْب أَسْوَد / ثُقوب سَوْداء / ثُقْبان سَوْدان / ثُقوبٍ سَوْداء / ثُقْبَيْن سَوْدَاوَيْن", "type": "word"},
+{"tense1": "Installation", "tense2": "تَثْبيت / تَثْبيتان / تَثْبيات / تَثْبياتٍ / تَثْبيتَيْن", "type": "word"},
+{"tense1": "Algorithme", "tense2": "خوارزميّة / خوارزميّات / خوارزميّتان / خوارزميّاتٍ / خوارزميّتَيْن", "type": "word"},
+{"tense1": "Différence", "tense2": "فَرْق / فُروق / فَرْقان / فُروقٍ / فَرْقَيْن", "type": "word"},
+{"tense1": "Contrairement à", "tense2": "بِخِلاف", "type": "sentence"},
+{"tense1": "Calibrage", "tense2": "مُعايَرة / مُعايَرات / مُعايَرتان / مُعايَراتٍ / مُعايَرتَيْن", "type": "word"},
+{"tense1": "Néanmoins", "tense2": "غَيْرَ أَنَّ", "type": "sentence"},
+{"tense1": "Efficacité", "tense2": "كَفاءَة / كَفاءات / كَفاءتان / كَفاءاتٍ / كَفاءتَيْن", "type": "word"},
+{"tense1": "Puce électronique", "tense2": "رَقيقة / رَقائق / رَقيقتان / رَقائقٍ / رَقيقتَيْن", "type": "word"},
+{"tense1": "Prometteur", "tense2": "واعِد / واعِدون / واعِدان / واعِدين / واعِدَيْن", "type": "word"},
+{"tense1": "Conviction", "tense2": "قَناعَة / قَناعات / قَناعَتان / قَناعاتٍ / قَناعَتَيْن", "type": "word"},
+{"tense1": "Marchandise", "tense2": "بِضاعَة / بِضائع / بِضاعَتان / بِضائعٍ / بِضاعَتَيْن", "type": "word"},
+{"tense1": "Licence / Permis", "tense2": "رُخْصَة / رُخَص / رُخْصَتان / رُخَصٍ / رُخْصَتَيْن", "type": "word"},
+{"tense1": "Évoquer", "tense2": "أَخْلى / يُخْلي / إِخْلاء / أَخْلِ / يُخْلَى / أُخْلِيَ", "type": "verb"},
+{"tense1": "Puits", "tense2": "بِئْر / آبار / بِئْران / آبارٍ / بِئْرَيْن", "type": "word"},
+{"tense1": "Armure", "tense2": "دِرْع / دُروع / دِرْعان / دُروعٍ / دِرْعَيْن", "type": "word"},
+{"tense1": "Favorable", "tense2": "مُواتٍ / مُواتية / مُواتيان / مُواتيات / مُواتَيْن", "type": "word"},
+{"tense1": "Confondre", "tense2": "اِرْتَبَكَ / يَرْتَبِكُ / اِرْتِباك / اِرْتَبِكْ / يُرْتَبَكُ / اُرْتُبِكَ", "type": "verb"}
 ]
         };
 
