new arabic words

--- a/index.html
+++ b/index.html
@@ -2450,7 +2450,7 @@
 {"tense1": "Gaspiller", "tense2": "هَدَرَ / يَهْدِرُ / هَدْر / اِهْدِرْ / يُهْدَرُ / هُدِرَ", "type": "verb"},
 {"tense1": "Robinet", "tense2": "صُنبور / صَنابير / صُنبوران / صَنابيرٍ / صُنبورَيْن", "type": "word"},
 {"tense1": "Blague", "tense2": "مَزْحَة / مَزْحات / مَزْحتان / مَزْحاتٍ / مَزْحَتَيْن", "type": "word"},
-{"tense1": "Hacker", "tense2": "اِخْتَرَقَ / يَخْتَرِقُ / اِخْتِراق / اِخْتَرِقْ / يُخْتَرَقُ / اُخْتُرِقَ", "type": "verb"},
+{"tense1": "Hacker/pénétrer", "tense2": "اِخْتَرَقَ / يَخْتَرِقُ / اِخْتِراق / اِخْتَرِقْ / يُخْتَرَقُ / اُخْتُرِقَ", "type": "verb"},
 {"tense1": "Audacieux", "tense2": "جَريء / جُرَآء / جَريئان / جُرَآءٍَ / جَريئَيْن", "type": "word"},
 {"tense1": "Microscopique", "tense2": "مِجْهَريّ / مِجْهَريّة / مِجْهَريّان / مِجْهَريّين / مِجْهَريّاتٍ", "type": "word"},
 {"tense1": "Trombonne", "tense2": "مُشَبِّك وَرَق / مُشَبِّكات وَرَق / مُشَبِّكان وَرَق / مُشَبِّكاتٍ وَرَق / مُشَبِّكَيْن وَرَق", "type": "word"},
@@ -2471,7 +2471,32 @@
 {"tense1": "Puits", "tense2": "بِئْر / آبار / بِئْران / آبارٍ / بِئْرَيْن", "type": "word"},
 {"tense1": "Armure", "tense2": "دِرْع / دُروع / دِرْعان / دُروعٍ / دِرْعَيْن", "type": "word"},
 {"tense1": "Favorable", "tense2": "مُواتٍ / مُواتية / مُواتيان / مُواتيات / مُواتَيْن", "type": "word"},
-{"tense1": "Confondre", "tense2": "اِرْتَبَكَ / يَرْتَبِكُ / اِرْتِباك / اِرْتَبِكْ / يُرْتَبَكُ / اُرْتُبِكَ", "type": "verb"}
+{"tense1": "Confondre", "tense2": "اِرْتَبَكَ / يَرْتَبِكُ / اِرْتِباك / اِرْتَبِكْ / يُرْتَبَكُ / اُرْتُبِكَ", "type": "verb"},
+{"tense1": "Manquer de", "tense2": "اِفْتَقَرَ/يَفْتَقِرُ/اِفْتِقَار/اِفْتَقِرْ/يُفْتَقَرُ/اُفْتُقِرَ", "type": "verb"},
+  {"tense1": "compliment", "tense2": "مُجَامَلَة / مُجَامَلَات / مُجَامَلَتَان / مُجَامَلَاتٍ / مُجَامَلَتَيْن", "type": "word"},
+  {"tense1": "Gratte-ciel", "tense2": "نَاطِحَةُ السَّحَاب / نَاطِحَاتُ السَّحَاب / نَاطِحَتَانِ لِلسَّحَاب / نَاطِحَاتِ السَّحَابٍ / نَاطِحَتَيْنِ لِلسَّحَاب", "type": "word"},
+  {"tense1": "Carburant", "tense2": "وَقُود / وُقُودَات / وُقُودَان / وُقُودَاتٍ / وُقُودَيْن", "type": "word"},
+  {"tense1": "fruit", "tense2": "ثَمَرَة / ثِمَار / ثَمَرَتَان / ثِمَارٍ / ثَمَرَتَيْن", "type": "word"},
+  {"tense1": "fragilité", "tense2": "هَشَاشَة / هَشَاشَات / هَشَاشَتَان / هَشَاشَاتٍ / هَشَاشَتَيْن", "type": "word"},
+  {"tense1": "Afin de", "tense2": "مِنْ أَجْلِ", "type": "sentence"},
+  {"tense1": "conclure", "tense2": "أَبْرَمَ/يُبْرِمُ/إِبْرَام/أَبْرِمْ/يُبْرَمُ/أُبْرِمَ", "type": "verb"},
+  {"tense1": "accélération", "tense2": "تَسَارُع / تَسَارُعَات / تَسَارُعَان / تَسَارُعَاتٍ / تَسَارُعَيْن", "type": "word"},
+  {"tense1": "évident", "tense2": "بَدِيهِيّ / بَدِيهِيُّون / بَدِيهِيَّان / بَدِيهِيِّينَ / بَدِيهِيَّيْن", "type": "word"},
+  {"tense1": "Un manque de", "tense2": "قِلَّة / قِلَل / قِلَّتَان / قِلَلٍ / قِلَّتَيْن", "type": "word"},
+  {"tense1": "Refuser", "tense2": "أَبَى/يَأْبَى/إِبَاء/أْبِ/يُؤْبَى/أُبِيَ", "type": "verb"},
+  {"tense1": "Devenir incontrolable", "tense2": "اِنْفَلَتَ/يَنْفَلِتُ/اِنْفِلَات/اِنْفَلِتْ/يُنْفَلَتُ/اُنْفُلِتَ", "type": "verb"},
+  {"tense1": "manoeuvre", "tense2": "مُنَاوَر / مُنَاوَرُون / مُنَاوَرَان / مُنَاوَرِينَ / مُنَاوَرَيْن", "type": "word"},
+  {"tense1": "intentionellement", "tense2": "عَمْدًا", "type": "word"},
+  {"tense1": "client", "tense2": "زَبُون / زَبَائِن / زَبُونَان / زَبَائِنٍ / زَبُونَيْن", "type": "word"},
+  {"tense1": "Supérieur/inférieur", "tense2": "عُلْوِيّ / سُفْلِيّ", "type": "word"},
+  {"tense1": "Bouet", "tense2": "عَوَّامَة / عَوَّامَات / عَوَّامَتَان / عَوَّامَاتٍ / عَوَّامَتَيْن", "type": "word"},
+  {"tense1": "Empiler", "tense2": "كَدَّسَ/يُكَدِّسُ/تَكْدِيس/كَدِّسْ/يُكَدَّسُ/كُدِّسَ", "type": "verb"},
+  {"tense1": "Emballage", "tense2": "عُبْوَة / عُبُوَات / عُبُوَتَان / عُبُوَاتٍ / عُبُوَتَيْن", "type": "word"},
+  {"tense1": "Canette", "tense2": "عُلْبَة / عُلَب / عُلْبَتَان / عُلَبٍ / عُلْبَتَيْن", "type": "word"},
+  {"tense1": "Composer", "tense2": "رَكَّبَ/يُرَكِّبُ/تَرْكِيب/رَكِّبْ/يُرَكَّبُ/رُكِّبَ", "type": "verb"},
+  {"tense1": "Se limiter", "tense2": "اِقْتَصَرَ/يَقْتَصِرُ/اِقْتِصَار/اِقْتَصِرْ/يُقْتَصَرُ/اُقْتُصِرَ", "type": "verb"},
+  {"tense1": "Lave-vaisselle", "tense2": "جَلَّايَة / جَلَّايَات / جَلَّايَتَان / جَلَّايَاتٍ / جَلَّايَتَيْن", "type": "word"},
+  {"tense1": "Rayure", "tense2": "خَدْش / خُدُوش / خَدْشَان / خُدُوشٍ / خَدْشَيْن", "type": "word"}
 ]
         };
 
