--- a/index.html
+++ b/index.html
@@ -2485,7 +2485,7 @@
   {"tense1": "Un manque de", "tense2": "قِلَّة / قِلَل / قِلَّتَان / قِلَلٍ / قِلَّتَيْن", "type": "word"},
   {"tense1": "Refuser", "tense2": "أَبَى/يَأْبَى/إِبَاء/أْبِ/يُؤْبَى/أُبِيَ", "type": "verb"},
   {"tense1": "Devenir incontrolable", "tense2": "اِنْفَلَتَ/يَنْفَلِتُ/اِنْفِلَات/اِنْفَلِتْ/يُنْفَلَتُ/اُنْفُلِتَ", "type": "verb"},
-  {"tense1": "manoeuvre", "tense2": "مُنَاوَر / مُنَاوَرُون / مُنَاوَرَان / مُنَاوَرِينَ / مُنَاوَرَيْن", "type": "word"},
+  {"tense1": "manoeuvre", "tense2": "مُنَاوَرَة / مُنَاوَرَات / مُنَاوَرَتَان / مُنَاوَرَاتٍ / مُنَاوَرَتَيْن", "type": "word"},
   {"tense1": "intentionellement", "tense2": "عَمْدًا", "type": "word"},
   {"tense1": "client", "tense2": "زَبُون / زَبَائِن / زَبُونَان / زَبَائِنٍ / زَبُونَيْن", "type": "word"},
   {"tense1": "Supérieur/inférieur", "tense2": "عُلْوِيّ / سُفْلِيّ", "type": "word"},
