new arabic words

--- a/index.html
+++ b/index.html
@@ -2496,7 +2496,32 @@
   {"tense1": "Composer", "tense2": "رَكَّبَ/يُرَكِّبُ/تَرْكِيب/رَكِّبْ/يُرَكَّبُ/رُكِّبَ", "type": "verb"},
   {"tense1": "Se limiter", "tense2": "اِقْتَصَرَ/يَقْتَصِرُ/اِقْتِصَار/اِقْتَصِرْ/يُقْتَصَرُ/اُقْتُصِرَ", "type": "verb"},
   {"tense1": "Lave-vaisselle", "tense2": "جَلَّايَة / جَلَّايَات / جَلَّايَتَان / جَلَّايَاتٍ / جَلَّايَتَيْن", "type": "word"},
-  {"tense1": "Rayure", "tense2": "خَدْش / خُدُوش / خَدْشَان / خُدُوشٍ / خَدْشَيْن", "type": "word"}
+  {"tense1": "Rayure", "tense2": "خَدْش / خُدُوش / خَدْشَان / خُدُوشٍ / خَدْشَيْن", "type": "word"},
+  {"tense1": "Perturber", "tense2": "أَخَلَّ/يُخِلُّ/إِخْلال/خِلَّ/يُخَلُّ/أُخِلَّ", "type": "verb"},
+  {"tense1": "Pourboire", "tense2": "بَقْشِيش / بَقَاشِيش / بَقْشِيشَان / بَقَاشِيشٍ / بَقْشِيشَيْن", "type": "word"},
+  {"tense1": "Suggérer", "tense2": "أَوْحَى/يُوحِي/إِيحَاء/أَوْحِ/يُوحَى/أُوحِيَ", "type": "verb"},
+  {"tense1": "générosité", "tense2": "سَخَاء / سَخَاءات / سَخَاءَان / سَخَاءاتٍ / سَخَاءَيْن", "type": "word"},
+  {"tense1": "actuelle", "tense2": "رَاهِنَة / رَاهِنَات / رَاهِنَتَان / رَاهِنَاتٍ / رَاهِنَتَيْن", "type": "word"},
+  {"tense1": "Un criminel", "tense2": "مُجْرِم / مُجْرِمُون / مُجْرِمَان / مُجْرِمِينَ / مُجْرِمَيْن", "type": "word"},
+  {"tense1": "S’aligner", "tense2": "اِصْطَفَّ/يَصْطَفُّ/اِصْطِفَاف/اِصْطَفَّ/يُصْطَفُّ/اُصْطُفَّ", "type": "verb"},
+  {"tense1": "Aisance", "tense2": "طَلاقَة / طَلاقَات / طَلاقَتَان / طَلاقَاتٍ / طَلاقَتَيْن", "type": "word"},
+  {"tense1": "étiquette", "tense2": "مُلْصَق / مُلْصَقَات / مُلْصَقَان / مُلْصَقَاتٍ / مُلْصَقَيْن", "type": "word"},
+  {"tense1": "Destination", "tense2": "مَقْصِد / مَقَاصِد / مَقْصِدَان / مَقَاصِدٍ / مَقْصِدَيْن", "type": "word"},
+  {"tense1": "réserve", "tense2": "اِحْتِياط / اِحْتِياطَات / اِحْتِياطَان / اِحْتِياطَاتٍ / اِحْتِياطَيْن", "type": "word"},
+  {"tense1": "Assister/aider", "tense2": "اِسْتَعَانَ/يَسْتَعِينُ/اِسْتِعَانَة/اِسْتَعِنْ/يُسْتَعَانُ/اُسْتُعِينَ", "type": "verb"},
+  {"tense1": "confus", "tense2": "مُرْتَبِك / مُرْتَبِكُون / مُرْتَبِكَان / مُرْتَبِكِينَ / مُرْتَبِكَيْن", "type": "word"},
+  {"tense1": "review", "tense2": "مُرَاجَعَة / مُرَاجَعَات / مُرَاجَعَتَان / مُرَاجَعَاتٍ / مُرَاجَعَتَيْن", "type": "word"},
+  {"tense1": "inflammation", "tense2": "اِلْتِهَاب / اِلْتِهَابَات / اِلْتِهَابَان / اِلْتِهَابَاتٍ / اِلْتِهَابَيْن", "type": "word"},
+  {"tense1": "esprit", "tense2": "ذِهْن / أَذْهَان / ذِهْنَان / أَذْهَانٍ / ذِهْنَيْن", "type": "word"},
+  {"tense1": "Slogan", "tense2": "شِعَار / شِعَارَات / شِعَارَان / شِعَارَاتٍ / شِعَارَيْن", "type": "word"},
+  {"tense1": "Boxe", "tense2": "مُلَاكَمَة / مُلَاكَمَات / مُلَاكَمَتَان / مُلَاكَمَاتٍ / مُلَاكَمَتَيْن", "type": "word"},
+  {"tense1": "rival", "tense2": "خَصْم / خُصُوم / خَصْمَان / خُصُومٍ / خَصْمَيْن", "type": "word"},
+  {"tense1": "allergie", "tense2": "حَسَاسِيَّة / حَسَاسِيَّات / حَسَاسِيَّتَان / حَسَاسِيَّاتٍ / حَسَاسِيَّتَيْن", "type": "word"},
+  {"tense1": "Gorge", "tense2": "حَلْق / حُلُوق / حَلْقَان / حُلُوقٍ / حَلْقَيْن", "type": "word"},
+  {"tense1": "gonfler", "tense2": "تَوَرَّمَ/يَتَوَرَّمُ/تَوَرُّم/تَوَرَّمْ/يُتَوَرَّمُ/تُوُرِّمَ", "type": "verb"},
+  {"tense1": "vertige", "tense2": "دُوخَة / دُوخَات / دُوخَتَان / دُوخَاتٍ / دُوخَتَيْن", "type": "word"},
+  {"tense1": "Texture", "tense2": "قِوَام / قِوَامَات / قِوَامَان / قِوَامَاتٍ / قِوَامَيْن", "type": "word"},
+  {"tense1": "luxueux", "tense2": "فَاخِر / فَاخِرُون / فَاخِرَان / فَاخِرِينَ / فَاخِرَيْن", "type": "word"}
 ]
         };
 
