new arabic words

--- a/index.html
+++ b/index.html
@@ -2441,7 +2441,7 @@
   {"tense1": "Variation", "tense2": "تَبايُن / تَبايُنات / تَبايُنانِ / تَبايُناتٍ / تَبايُنَيْنِ", "type": "word"},
   {"tense1": "Circuit intégré", "tense2": "دائرة مُتَكامِلة / دَوائِر مُتَكامِلة / دائرتانِ مُتَكامِلتانِ / دَوائِرَ مُتَكامِلةً / دائرتَيْنِ مُتَكامِلَتَيْنِ", "type": "word"},
   {"tense1": "Négliger", "tense2": "أَغْفَلَ / يُغْفِلُ / إغْفال / أَغْفِلْ / يُغْفَلُ / أُغْفِلَ", "type": "verb"},
-  {"tense1": "Infraction", "tense2": "اِنْتِهاك / اِنْتِهاكات / اِنْتِهاكان / اِنْتِهاكاتٍ / اِنْتِهاكَيْن", "type": "word"},
+  {"tense1": "Infraction/violation", "tense2": "اِنْتِهاك / اِنْتِهاكات / اِنْتِهاكان / اِنْتِهاكاتٍ / اِنْتِهاكَيْن", "type": "word"},
   {"tense1": "Exportation", "tense2": "تَصْدير / تَصْديرات / تَصْديران / تَصْديراتٍ / تَصْديرَيْن", "type": "word"},
 {"tense1": "Condamner", "tense2": "أَدانَ / يُدينُ / إِدانة / دِنْ / يُدانُ / أُدينَ", "type": "verb"},
 {"tense1": "Rationaliser / Optimiser", "tense2": "رَشَّدَ / يُرَشِّدُ / تَرْشيد / رَشِّدْ / يُرَشَّدُ / رُشِّدَ", "type": "verb"},
@@ -2511,7 +2511,6 @@
   {"tense1": "Assister/aider", "tense2": "اِسْتَعَانَ/يَسْتَعِينُ/اِسْتِعَانَة/اِسْتَعِنْ/يُسْتَعَانُ/اُسْتُعِينَ", "type": "verb"},
   {"tense1": "confus", "tense2": "مُرْتَبِك / مُرْتَبِكُون / مُرْتَبِكَان / مُرْتَبِكِينَ / مُرْتَبِكَيْن", "type": "word"},
   {"tense1": "review", "tense2": "مُرَاجَعَة / مُرَاجَعَات / مُرَاجَعَتَان / مُرَاجَعَاتٍ / مُرَاجَعَتَيْن", "type": "word"},
-  {"tense1": "inflammation", "tense2": "اِلْتِهَاب / اِلْتِهَابَات / اِلْتِهَابَان / اِلْتِهَابَاتٍ / اِلْتِهَابَيْن", "type": "word"},
   {"tense1": "esprit", "tense2": "ذِهْن / أَذْهَان / ذِهْنَان / أَذْهَانٍ / ذِهْنَيْن", "type": "word"},
   {"tense1": "Slogan", "tense2": "شِعَار / شِعَارَات / شِعَارَان / شِعَارَاتٍ / شِعَارَيْن", "type": "word"},
   {"tense1": "Boxe", "tense2": "مُلَاكَمَة / مُلَاكَمَات / مُلَاكَمَتَان / مُلَاكَمَاتٍ / مُلَاكَمَتَيْن", "type": "word"},
@@ -2519,9 +2518,35 @@
   {"tense1": "allergie", "tense2": "حَسَاسِيَّة / حَسَاسِيَّات / حَسَاسِيَّتَان / حَسَاسِيَّاتٍ / حَسَاسِيَّتَيْن", "type": "word"},
   {"tense1": "Gorge", "tense2": "حَلْق / حُلُوق / حَلْقَان / حُلُوقٍ / حَلْقَيْن", "type": "word"},
   {"tense1": "gonfler", "tense2": "تَوَرَّمَ/يَتَوَرَّمُ/تَوَرُّم/تَوَرَّمْ/يُتَوَرَّمُ/تُوُرِّمَ", "type": "verb"},
+  {"tense1": "inflammation/infection", "tense2": "اِلْتِهَاب / اِلْتِهَابَات / اِلْتِهَابَان / اِلْتِهَابَاتٍ / اِلْتِهَابَيْن", "type": "word"},
   {"tense1": "vertige", "tense2": "دُوخَة / دُوخَات / دُوخَتَان / دُوخَاتٍ / دُوخَتَيْن", "type": "word"},
   {"tense1": "Texture", "tense2": "قِوَام / قِوَامَات / قِوَامَان / قِوَامَاتٍ / قِوَامَيْن", "type": "word"},
-  {"tense1": "luxueux", "tense2": "فَاخِر / فَاخِرُون / فَاخِرَان / فَاخِرِينَ / فَاخِرَيْن", "type": "word"}
+  {"tense1": "luxueux", "tense2": "فَاخِر / فَاخِرُون / فَاخِرَان / فَاخِرِينَ / فَاخِرَيْن", "type": "word"},
+  {"tense1": "File d’attente", "tense2": "طَابُور / طَوَابِير / طَابُورَان / طَوَابِيرٍ / طَابُورَيْن", "type": "word"},
+  {"tense1": "client", "tense2": "مُوَكِّل / مُوَكِّلُون / مُوَكِّلَان / مُوَكِّلِينَ / مُوَكِّلَيْن", "type": "word"},
+  {"tense1": "bénévole", "tense2": "مُتَطَوِّعَة / مُتَطَوِّعَات / مُتَطَوِّعَتَان / مُتَطَوِّعَاتٍ / مُتَطَوِّعَتَيْن", "type": "word"},
+  {"tense1": "Se réfugier", "tense2": "لَجَأَ/يَلْجَأُ/لُجُوء/اِلْجَأْ/يُلْجَأُ/لُجِئَ", "type": "verb"},
+  {"tense1": "A venir", "tense2": "وَشِيك / وَشِيك / وَشِيك / وَشِيك / وَشِيكَيْن", "type": "word"},
+  {"tense1": "plainte", "tense2": "دَعْوَى / دَعَاوَى / دَعْوَيَان / دَعَاوَىٍ / دَعْوَيَيْن", "type": "word"},
+  {"tense1": "Hostile", "tense2": "عِدَائِيّ / عِدَائِيُّون / عِدَائِيَّان / عِدَائِيِّينَ / عِدَائِيَّيْن", "type": "word"},
+  {"tense1": "Blond", "tense2": "أَشْقَر / شُقْر / أَشْقَرَان / شُقْرٍ / أَشْقَرَيْن", "type": "word"},
+  {"tense1": "Dévouement", "tense2": "تَفَانٍ / تَفَانِيَات / تَفَانِيَان / تَفَانِيَاتٍ / تَفَانِيَيْن", "type": "word"},
+  {"tense1": "éloge", "tense2": "إِشَادَة / إِشَادَات / إِشَادَتَان / إِشَادَاتٍ / إِشَادَتَيْن", "type": "word"},
+  {"tense1": "humour", "tense2": "دُعَابَة / دُعَابَات / دُعَابَتَان / دُعَابَاتٍ / دُعَابَتَيْن", "type": "word"},
+  {"tense1": "Modéré", "tense2": "مُعْتَدِل / مُعْتَدِلُون / مُعْتَدِلَان / مُعْتَدِلِينَ / مُعْتَدِلَيْن", "type": "word"},
+  {"tense1": "référence", "tense2": "مَرْجِع / مَرَاجِع / مَرْجِعَان / مَرَاجِعٍ / مَرْجِعَيْن", "type": "word"},
+  {"tense1": "aborder", "tense2": "تَطَرَّقَ/يَتَطَرَّقُ/تَطَرُّق/تَطَرَّقْ/يُتَطَرَّقُ/تُطُرِّقَ", "type": "verb"},
+  {"tense1": "Diamant", "tense2": "أَلْمَاسَة / أَلْمَاسَات / أَلْمَاسَتَان / أَلْمَاسَاتٍ / أَلْمَاسَتَيْن", "type": "word"},
+  {"tense1": "métaphore", "tense2": "اِسْتِعَارَة / اِسْتِعَارَات / اِسْتِعَارَتَان / اِسْتِعَارَاتٍ / اِسْتِعَارَتَيْن", "type": "word"},
+  {"tense1": "épicerie", "tense2": "بَقَّالَة / بَقَّالَات / بَقَّالَتَان / بَقَّالَاتٍ / بَقَّالَتَيْن", "type": "word"},
+  {"tense1": "Entretient", "tense2": "صِيَانَة / صِيَانَات / صِيَانَتَان / صِيَانَاتٍ / صِيَانَتَيْن", "type": "word"},
+  {"tense1": "gay", "tense2": "مِثْلِيّ / مِثْلِيُّون / مِثْلِيَّان / مِثْلِيِّينَ / مِثْلِيَّيْن", "type": "word"},
+  {"tense1": "harcèlement", "tense2": "مُضَايَقَة / مُضَايَقَات / مُضَايَقَتَان / مُضَايَقَاتٍ / مُضَايَقَتَيْن", "type": "word"},
+  {"tense1": "préoccupation", "tense2": "مَخَاوِف / مَخَاوِفُ (جمع فقط) / — / مَخَاوِفٍ / —", "type": "word"},
+  {"tense1": "misérable", "tense2": "حَقِير / حُقَرَاء / حَقِيرَان / حُقَرَاءٍ / حَقِيرَيْن", "type": "word"},
+  {"tense1": "partisant", "tense2": "أَنْصَارِيّ / أَنْصَارِيُّون / أَنْصَارِيَّان / أَنْصَارِيِّينَ / أَنْصَارِيَّيْن", "type": "word"},
+  {"tense1": "Condamnation", "tense2": "إِدَانَة / إِدَانَات / إِدَانَتَان / إِدَانَاتٍ / إِدَانَتَيْن", "type": "word"},
+  {"tense1": "tribunal", "tense2": "مَحْكَمَة / مَحَاكِم / مَحْكَمَتَان / مَحَاكِمٍ / مَحْكَمَتَيْن", "type": "word"}
 ]
         };
 
