new arabic words

--- a/index.html
+++ b/index.html
@@ -2545,7 +2545,32 @@
   {"tense1": "misérable", "tense2": "حَقِير / حُقَرَاء / حَقِيرَان / حُقَرَاءٍ / حَقِيرَيْن", "type": "word"},
   {"tense1": "partisant", "tense2": "أَنْصَارِيّ / أَنْصَارِيُّون / أَنْصَارِيَّان / أَنْصَارِيِّينَ / أَنْصَارِيَّيْن", "type": "word"},
   {"tense1": "Condamnation", "tense2": "إِدَانَة / إِدَانَات / إِدَانَتَان / إِدَانَاتٍ / إِدَانَتَيْن", "type": "word"},
-  {"tense1": "tribunal", "tense2": "مَحْكَمَة / مَحَاكِم / مَحْكَمَتَان / مَحَاكِمٍ / مَحْكَمَتَيْن", "type": "word"}
+  {"tense1": "tribunal", "tense2": "مَحْكَمَة / مَحَاكِم / مَحْكَمَتَان / مَحَاكِمٍ / مَحْكَمَتَيْن", "type": "word"},
+  {"tense1": "Essence/but", "tense2": "جَوْهَر / جَوَاهِر / جَوْهَرَان / جَوَاهِرٍ / جَوْهَرَيْن", "type": "word"},
+  {"tense1": "Lier à", "tense2": "اِنْطَوَى/يَنْطَوِي/اِنْطِوَاء/اِنْطَوِ/يُنْطَوَى/اُنْطُوِيَ", "type": "verb"},
+  {"tense1": "license", "tense2": "تَرْخِيص / تَرْخِيصَات / تَرْخِيصَان / تَرْخِيصَاتٍ / تَرْخِيصَيْن", "type": "word"},
+  {"tense1": "paradis", "tense2": "جَنَّة / جَنَّات / جَنَّتَان / جَنَّاتٍ / جَنَّتَيْن", "type": "word"},
+  {"tense1": "région", "tense2": "إِقْلِيم / أَقَالِيم / إِقْلِيمَان / أَقَالِيمٍ / إِقْلِيمَيْن", "type": "word"},
+  {"tense1": "patrimoine", "tense2": "تُرَاث / تُرَاثَات / تُرَاثَان / تُرَاثَاتٍ / تُرَاثَيْن", "type": "word"},
+  {"tense1": "s’abonner", "tense2": "اِشْتَرَكَ/يَشْتَرِكُ/اِشْتِرَاك/اِشْتَرِكْ/يُشْتَرَكُ/اُشْتُرِكَ", "type": "verb"},
+  {"tense1": "architecture", "tense2": "مِعْمَار / مَعَامِير / مِعْمَارَان / مَعَامِيرٍ / مِعْمَارَيْن", "type": "word"},
+  {"tense1": "vierge", "tense2": "عَذْرَاء / عَذَارَى / عَذْرَاءَان / عَذَارَىٍ / عَذْرَاءَيْن", "type": "word"},
+  {"tense1": "incliné", "tense2": "مَائِل / مَائِلُون / مَائِلَان / مَائِلِينَ / مَائِلَيْن", "type": "word"},
+  {"tense1": "sortie", "tense2": "طَلْعَة / طَلَعَات / طَلْعَتَان / طَلَعَاتٍ / طَلْعَتَيْن", "type": "word"},
+  {"tense1": "Guarde côte", "tense2": "خَفَرُ السَّوَاحِل / — / — / خَفَرِ السَّوَاحِلِ / —", "type": "word"},
+  {"tense1": "Réfrigérateur", "tense2": "ثَلَّاجَة / ثَلَّاجَات / ثَلَّاجَتَان / ثَلَّاجَاتٍ / ثَلَّاجَتَيْن", "type": "word"},
+  {"tense1": "glace", "tense2": "بُوظَة / بُوظَات / بُوظَتَان / بُوظَاتٍ / بُوظَتَيْن", "type": "word"},
+  {"tense1": "Pénurie (rare)", "tense2": "نُدْرَة / نُدَر / نُدْرَتَان / نُدَرٍ / نُدْرَتَيْن", "type": "word"},
+  {"tense1": "digérer", "tense2": "هَضَمَ/يَهْضِمُ/هَضْم/اِهْضِمْ/يُهْضَمُ/هُضِمَ", "type": "verb"},
+  {"tense1": "Diarrhée", "tense2": "إِسْهَال / إِسْهَالَات / إِسْهَالَان / إِسْهَالَاتٍ / إِسْهَالَيْن", "type": "word"},
+  {"tense1": "recensement", "tense2": "تِعْدَاد / تِعْدَادَات / تِعْدَادَان / تِعْدَادَاتٍ / تِعْدَادَيْن", "type": "word"},
+  {"tense1": "évacuer", "tense2": "أَجْلَى/يُجْلِي/إِجْلَاء/أَجْلِ/يُجْلَى/أُجْلِيَ", "type": "verb"},
+  {"tense1": "Annoncer/rapporter", "tense2": "أَفَادَ/يُفِيدُ/إِفَادَة/فِدْ/يُفَادُ/أُفِيدَ", "type": "verb"},
+  {"tense1": "Éteindre (feu)", "tense2": "أَخْمَدَ/يُخْمِدُ/إِخْمَاد/أَخْمِدْ/يُخْمَدُ/أُخْمِدَ", "type": "verb"},
+  {"tense1": "Il y a", "tense2": "ثَمَّةَ", "type": "sentence"},
+  {"tense1": "béton", "tense2": "خَرَسَانَة / خَرَسَانَات / خَرَسَانَتَان / خَرَسَانَاتٍ / خَرَسَانَتَيْن", "type": "word"},
+  {"tense1": "pente/inclinaison", "tense2": "مَيْل / مُيُول / مَيْلَان / مُيُولٍ / مَيْلَيْن", "type": "word"},
+  {"tense1": "Ventouse/succion", "tense2": "شَفْط / شَفْطَات / شَفْطَان / شَفْطَاتٍ / شَفْطَيْن", "type": "word"}
 ]
         };
 
