--- a/index.html
+++ b/index.html
@@ -2557,7 +2557,7 @@
   {"tense1": "vierge", "tense2": "عَذْرَاء / عَذَارَى / عَذْرَاءَان / عَذَارَىٍ / عَذْرَاءَيْن", "type": "word"},
   {"tense1": "incliné", "tense2": "مَائِل / مَائِلُون / مَائِلَان / مَائِلِينَ / مَائِلَيْن", "type": "word"},
   {"tense1": "sortie", "tense2": "طَلْعَة / طَلَعَات / طَلْعَتَان / طَلَعَاتٍ / طَلْعَتَيْن", "type": "word"},
-  {"tense1": "Guarde côte", "tense2": "خَفَرُ السَّوَاحِل / — / — / خَفَرِ السَّوَاحِلِ / —", "type": "word"},
+  {"tense1": "Guarde côte", "tense2": "خَفَرُ السَّوَاحِل", "type": "sentence"},
   {"tense1": "Réfrigérateur", "tense2": "ثَلَّاجَة / ثَلَّاجَات / ثَلَّاجَتَان / ثَلَّاجَاتٍ / ثَلَّاجَتَيْن", "type": "word"},
   {"tense1": "glace", "tense2": "بُوظَة / بُوظَات / بُوظَتَان / بُوظَاتٍ / بُوظَتَيْن", "type": "word"},
   {"tense1": "Pénurie (rare)", "tense2": "نُدْرَة / نُدَر / نُدْرَتَان / نُدَرٍ / نُدْرَتَيْن", "type": "word"},
