new arabic words

--- a/index.html
+++ b/index.html
@@ -2570,7 +2570,32 @@
   {"tense1": "Il y a", "tense2": "ثَمَّةَ", "type": "sentence"},
   {"tense1": "béton", "tense2": "خَرَسَانَة / خَرَسَانَات / خَرَسَانَتَان / خَرَسَانَاتٍ / خَرَسَانَتَيْن", "type": "word"},
   {"tense1": "pente/inclinaison", "tense2": "مَيْل / مُيُول / مَيْلَان / مُيُولٍ / مَيْلَيْن", "type": "word"},
-  {"tense1": "Ventouse/succion", "tense2": "شَفْط / شَفْطَات / شَفْطَان / شَفْطَاتٍ / شَفْطَيْن", "type": "word"}
+  {"tense1": "Ventouse/succion", "tense2": "شَفْط / شَفْطَات / شَفْطَان / شَفْطَاتٍ / شَفْطَيْن", "type": "word"},
+  {"tense1": "Accessoire", "tense2": "مُلْحَق / مُلْحَقَات / مُلْحَقَان / مُلْحَقَاتٍ / مُلْحَقَيْن", "type": "word"},
+  {"tense1": "promouvoir", "tense2": "رَوَّجَ/يُرَوِّجُ/تَرْوِيج/رَوِّجْ/يُرَوَّجُ/رُوِّجَ", "type": "verb"},
+  {"tense1": "équitable", "tense2": "مُنْصِف / مُنْصِفُون / مُنْصِفَان / مُنْصِفِينَ / مُنْصِفَيْن", "type": "word"},
+  {"tense1": "but/purpose", "tense2": "غَرَض / أَغْرَاض / غَرَضَان / أَغْرَاضٍ / غَرَضَيْن", "type": "word"},
+  {"tense1": "trajectoire", "tense2": "مَسَار / مَسَارَات / مَسَارَان / مَسَارَاتٍ / مَسَارَيْن", "type": "word"},
+  {"tense1": "inévitable", "tense2": "لَا مَحَالَةَ", "type": "sentence"},
+  {"tense1": "Taureau", "tense2": "ثَوْر / ثِيرَان / ثَوْرَان / ثِيرَانٍ / ثَوْرَيْن", "type": "word"},
+  {"tense1": "viser", "tense2": "صَوَّبَ/يُصَوِّبُ/تَصْوِيب/صَوِّبْ/يُصَوَّبُ/صُوِّبَ", "type": "verb"},
+  {"tense1": "tir", "tense2": "تَسْدِيدَة / تَسْدِيدَات / تَسْدِيدَتَان / تَسْدِيدَاتٍ / تَسْدِيدَتَيْن", "type": "word"},
+  {"tense1": "correcte", "tense2": "صَحِيحَة / صَحِيحَات / صَحِيحَتَان / صَحِيحَاتٍ / صَحِيحَتَيْن", "type": "word"},
+  {"tense1": "prononcé", "tense2": "نَطَقَ/يَنْطِقُ/نُطْق/اِنْطِقْ/يُنْطَقُ/نُطِقَ", "type": "verb"},
+  {"tense1": "Commettre/perpétrer", "tense2": "اِقْتَرَفَ/يَقْتَرِفُ/اِقْتِرَاف/اِقْتَرِفْ/يُقْتَرَفُ/اُقْتُرِفَ", "type": "verb"},
+  {"tense1": "attribuer", "tense2": "نَسَبَ/يَنْسِبُ/نِسْبَة/اِنْسِبْ/يُنْسَبُ/نُسِبَ", "type": "verb"},
+  {"tense1": "pouce", "tense2": "بُوصَة / بُوصَات / بُوصَتَان / بُوصَاتٍ / بُوصَتَيْن", "type": "word"},
+  {"tense1": "En jeu", "tense2": "عَلَى الْمَحَكِّ", "type": "sentence"},
+  {"tense1": "enthousiasme", "tense2": "إِثَارَة / إِثَارَات / إِثَارَتَان / إِثَارَاتٍ / إِثَارَتَيْن", "type": "word"},
+  {"tense1": "blog", "tense2": "مُدَوَّنَة / مُدَوَّنَات / مُدَوَّنَتَان / مُدَوَّنَاتٍ / مُدَوَّنَتَيْن", "type": "word"},
+  {"tense1": "équipage", "tense2": "طَاقِم / أَطْقُم / طَاقِمَان / أَطْقُمٍ / طَاقِمَيْن", "type": "word"},
+  {"tense1": "Dévorer", "tense2": "اِلْتَهَمَ/يَلْتَهِمُ/اِلْتِهَام/اِلْتَهِمْ/يُلْتَهَمُ/اُلْتُهِمَ", "type": "verb"},
+  {"tense1": "devoir", "tense2": "تَعَيَّنَ/يَتَعَيَّنُ/تَعَيُّن/تَعَيَّنْ/يُتَعَيَّنُ/تُعُيِّنَ", "type": "verb"},
+  {"tense1": "menotte", "tense2": "قَيْد / أَصْفَاد / قَيْدَان / أَصْفَادٍ / قَيْدَيْن", "type": "word"},
+  {"tense1": "endetté", "tense2": "مَدِين / مَدِينُون / مَدِينَان / مَدِينِينَ / مَدِينَيْن", "type": "word"},
+  {"tense1": "Emprisonner", "tense2": "حَبَسَ/يَحْبِسُ/حَبْس/اِحْبِسْ/يُحْبَسُ/حُبِسَ", "type": "verb"},
+  {"tense1": "oreiller", "tense2": "وِسَادَة / وِسَادَات / وِسَادَتَان / وِسَادَاتٍ / وِسَادَتَيْن", "type": "word"},
+  {"tense1": "écouter", "tense2": "أَصْغَى/يُصْغِي/إِصْغَاء/أَصْغِ/يُصْغَى/أُصْغِيَ", "type": "verb"}
 ]
         };
 
