--- a/index.html
+++ b/index.html
@@ -2591,7 +2591,7 @@
   {"tense1": "équipage", "tense2": "طَاقِم / أَطْقُم / طَاقِمَان / أَطْقُمٍ / طَاقِمَيْن", "type": "word"},
   {"tense1": "Dévorer", "tense2": "اِلْتَهَمَ/يَلْتَهِمُ/اِلْتِهَام/اِلْتَهِمْ/يُلْتَهَمُ/اُلْتُهِمَ", "type": "verb"},
   {"tense1": "devoir", "tense2": "تَعَيَّنَ/يَتَعَيَّنُ/تَعَيُّن/تَعَيَّنْ/يُتَعَيَّنُ/تُعُيِّنَ", "type": "verb"},
-  {"tense1": "menotte", "tense2": "قَيْد / أَصْفَاد / قَيْدَان / أَصْفَادٍ / قَيْدَيْن", "type": "word"},
+  {"tense1": "menotte", "tense2": "مِصْفَد / أَصْفَاد / مِصْفَدَان / أَصْفَادٍ / مِصْفَدَيْن", "type": "word"},
   {"tense1": "endetté", "tense2": "مَدِين / مَدِينُون / مَدِينَان / مَدِينِينَ / مَدِينَيْن", "type": "word"},
   {"tense1": "Emprisonner", "tense2": "حَبَسَ/يَحْبِسُ/حَبْس/اِحْبِسْ/يُحْبَسُ/حُبِسَ", "type": "verb"},
   {"tense1": "oreiller", "tense2": "وِسَادَة / وِسَادَات / وِسَادَتَان / وِسَادَاتٍ / وِسَادَتَيْن", "type": "word"},
